--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "dependencies": {
     "@emotion/babel-preset-css-prop": "^10.0.27",
     "@emotion/core": "^10.0.28",
+    "@mdx-js/mdx": "^1.5.7",
+    "@mdx-js/react": "^1.5.7",
     "@svgr/webpack": "^5.2.0",
     "@types/react-helmet": "^5.0.15",
     "babel-plugin-macros": "^2.8.0",
@@ -15,12 +17,14 @@
     "gatsby-image": "^2.2.43",
     "gatsby-plugin-emotion": "^4.1.24",
     "gatsby-plugin-manifest": "^2.2.44",
+    "gatsby-plugin-mdx": "^1.0.77",
     "gatsby-plugin-offline": "^3.0.37",
     "gatsby-plugin-postcss": "^2.1.21",
     "gatsby-plugin-react-helmet": "^3.1.23",
     "gatsby-plugin-sharp": "^2.4.7",
     "gatsby-plugin-svgr": "^2.0.2",
     "gatsby-plugin-typescript": "^2.2.2",
+    "gatsby-remark-images": "^3.1.46",
     "gatsby-source-filesystem": "^2.1.50",
     "gatsby-transformer-sharp": "^2.3.17",
     "postcss-import": "^12.0.1",
