--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@mdx-js/react": "^1.5.7",
     "@svgr/webpack": "^5.2.0",
     "@types/react-helmet": "^5.0.15",
+    "@types/uuid": "^7.0.0",
     "babel-plugin-macros": "^2.8.0",
     "emotion-theming": "^10.0.27",
     "gatsby": "^2.19.32",
@@ -34,7 +35,8 @@
     "react-helmet": "^5.2.1",
     "stylelint": "^13.2.0",
     "tailwind.macro": "^1.0.0-alpha.10",
-    "tailwindcss": "^1.2.0"
+    "tailwindcss": "^1.2.0",
+    "uuid": "^7.0.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
